--- a/archives.html
+++ b/archives.html
@@ -11787,6 +11787,8 @@ jQuery(document).ready(function($) {
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/font-awesome-4.2.0/css/font-awesome.min.css" />
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/main.css" />
 
+        <link href="http://www.degeneratestate.org/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Degenerate State Atom Feed" />
+        <link href="http://www.degeneratestate.org/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Degenerate State RSS Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -11808,6 +11810,10 @@ jQuery(document).ready(function($) {
 <h1>Archives for Degenerate State</h1>
 
 <dl>
+    <dt>30/06/2016</dt>
+    <dd><a href="http://www.degeneratestate.org/posts/2016/Jun/30/exploring-the-panama-papers-network/">Exploring the Panama Papers Network</a></dd>
+    <dt>15/06/2016</dt>
+    <dd><a href="http://www.degeneratestate.org/posts/2016/Jun/15/extracting-tabular-data-from-pdfs/">Extracting Tabular Data from PDFs</a></dd>
     <dt>01/05/2016</dt>
     <dd><a href="http://www.degeneratestate.org/posts/2016/May/01/visualising-hypercubes/">Visualising Hypercubes</a></dd>
     <dt>20/04/2016</dt>
@@ -11826,8 +11832,16 @@ jQuery(document).ready(function($) {
 </section>
 
         <footer id="contentinfo" class="body">
+        <br>
+        <div id="feedfooter">
+            <ul>
+            <li><a href="http://www.degeneratestate.org/feeds/all.atom.xml" rel="alternate">Atom feed</a></li>
+            <li><a href="http://www.degeneratestate.org/feeds/all.rss.xml" rel="alternate">RSS feed</a></li>
+            </ul>
+        </div>
+
 		<br>
-			
+			<p>Copyright &copy 2015 - <script type="text/javascript">document.write(new Date().getFullYear()); </script> Degenerate State </p>
         </footer><!-- /#contentinfo -->
 		</div>
 	</div>
