--- a/authors.html
+++ b/authors.html
@@ -11787,6 +11787,8 @@ jQuery(document).ready(function($) {
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/font-awesome-4.2.0/css/font-awesome.min.css" />
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/main.css" />
 
+        <link href="http://www.degeneratestate.org/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Degenerate State Atom Feed" />
+        <link href="http://www.degeneratestate.org/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Degenerate State RSS Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -11808,14 +11810,22 @@ jQuery(document).ready(function($) {
 <section id="content" class="body">
     <h1>Authors on Degenerate State</h1>
     <ul>
-        <li><a href="http://www.degeneratestate.org/author/iain.html">Iain</a> (7)</li>
+        <li><a href="http://www.degeneratestate.org/author/iain.html">Iain</a> (9)</li>
     </ul>
 </section>
 
 
         <footer id="contentinfo" class="body">
+        <br>
+        <div id="feedfooter">
+            <ul>
+            <li><a href="http://www.degeneratestate.org/feeds/all.atom.xml" rel="alternate">Atom feed</a></li>
+            <li><a href="http://www.degeneratestate.org/feeds/all.rss.xml" rel="alternate">RSS feed</a></li>
+            </ul>
+        </div>
+
 		<br>
-			
+			<p>Copyright &copy 2015 - <script type="text/javascript">document.write(new Date().getFullYear()); </script> Degenerate State </p>
         </footer><!-- /#contentinfo -->
 		</div>
 	</div>
