--- a/categories.html
+++ b/categories.html
@@ -11787,6 +11787,8 @@ jQuery(document).ready(function($) {
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/font-awesome-4.2.0/css/font-awesome.min.css" />
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/main.css" />
 
+        <link href="http://www.degeneratestate.org/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Degenerate State Atom Feed" />
+        <link href="http://www.degeneratestate.org/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Degenerate State RSS Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -11805,6 +11807,7 @@ jQuery(document).ready(function($) {
 		    </header><!-- /#banner -->
 
 <ul>
+    <li><a href="http://www.degeneratestate.org/category/extracting_pdf_tables.html">extracting_pdf_tables</a></li>
     <li><a href="http://www.degeneratestate.org/category/first.html">First</a></li>
     <li><a href="http://www.degeneratestate.org/category/gameoflife1.html">GameOfLife1</a></li>
     <li><a href="http://www.degeneratestate.org/category/generalelection1.html">GeneralElection1</a></li>
@@ -11812,11 +11815,20 @@ jQuery(document).ready(function($) {
     <li><a href="http://www.degeneratestate.org/category/hypercube.html">HyperCube</a></li>
     <li><a href="http://www.degeneratestate.org/category/mastermind.html">Mastermind</a></li>
     <li><a href="http://www.degeneratestate.org/category/metallyrics1.html">MetalLyrics1</a></li>
+    <li><a href="http://www.degeneratestate.org/category/panama_paper_network.html">panama_paper_network</a></li>
 </ul>
 
         <footer id="contentinfo" class="body">
+        <br>
+        <div id="feedfooter">
+            <ul>
+            <li><a href="http://www.degeneratestate.org/feeds/all.atom.xml" rel="alternate">Atom feed</a></li>
+            <li><a href="http://www.degeneratestate.org/feeds/all.rss.xml" rel="alternate">RSS feed</a></li>
+            </ul>
+        </div>
+
 		<br>
-			
+			<p>Copyright &copy 2015 - <script type="text/javascript">document.write(new Date().getFullYear()); </script> Degenerate State </p>
         </footer><!-- /#contentinfo -->
 		</div>
 	</div>
