--- a/index.html
+++ b/index.html
@@ -11787,6 +11787,8 @@ jQuery(document).ready(function($) {
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/font-awesome-4.2.0/css/font-awesome.min.css" />
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/main.css" />
 
+        <link href="http://www.degeneratestate.org/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Degenerate State Atom Feed" />
+        <link href="http://www.degeneratestate.org/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Degenerate State RSS Feed" />
 
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -11806,6 +11808,18 @@ jQuery(document).ready(function($) {
 
 
 <section id="content" class="body">
+		<div class = "index-entry">
+            <p>
+				30/06/2016 - 
+				<a href="http://www.degeneratestate.org/posts/2016/Jun/30/exploring-the-panama-papers-network/" rel="bookmark" title="Permalink to Exploring the Panama Papers Network">Exploring the Panama Papers Network</a>
+			</p>
+		</div>
+		<div class = "index-entry">
+            <p>
+				15/06/2016 - 
+				<a href="http://www.degeneratestate.org/posts/2016/Jun/15/extracting-tabular-data-from-pdfs/" rel="bookmark" title="Permalink to Extracting Tabular Data from PDFs">Extracting Tabular Data from PDFs</a>
+			</p>
+		</div>
 		<div class = "index-entry">
             <p>
 				01/05/2016 - 
@@ -11852,8 +11866,16 @@ jQuery(document).ready(function($) {
 
 
         <footer id="contentinfo" class="body">
+        <br>
+        <div id="feedfooter">
+            <ul>
+            <li><a href="http://www.degeneratestate.org/feeds/all.atom.xml" rel="alternate">Atom feed</a></li>
+            <li><a href="http://www.degeneratestate.org/feeds/all.rss.xml" rel="alternate">RSS feed</a></li>
+            </ul>
+        </div>
+
 		<br>
-			
+			<p>Copyright &copy 2015 - <script type="text/javascript">document.write(new Date().getFullYear()); </script> Degenerate State </p>
         </footer><!-- /#contentinfo -->
 		</div>
 	</div>
