Second part of metal models added

--- a/index.html
+++ b/index.html
@@ -11810,6 +11810,12 @@ jQuery(document).ready(function($) {
 <section id="content" class="body">
 		<div class = "index-entry">
             <p>
+				12/09/2016 - 
+				<a href="http://www.degeneratestate.org/posts/2016/Sep/12/heavy-metal-and-natural-language-processing-part-2/" rel="bookmark" title="Permalink to Heavy Metal and Natural Language Processing - Part 2">Heavy Metal and Natural Language Processing - Part 2</a>
+			</p>
+		</div>
+		<div class = "index-entry">
+            <p>
 				30/06/2016 - 
 				<a href="http://www.degeneratestate.org/posts/2016/Jun/30/exploring-the-panama-papers-network/" rel="bookmark" title="Permalink to Exploring the Panama Papers Network">Exploring the Panama Papers Network</a>
 			</p>
