--- a/categories.html
+++ b/categories.html
@@ -11815,6 +11815,7 @@ jQuery(document).ready(function($) {
     <li><a href="http://www.degeneratestate.org/category/hypercube.html">HyperCube</a></li>
     <li><a href="http://www.degeneratestate.org/category/mastermind.html">Mastermind</a></li>
     <li><a href="http://www.degeneratestate.org/category/metallyrics1.html">MetalLyrics1</a></li>
+    <li><a href="http://www.degeneratestate.org/category/metallyrics2.html">MetalLyrics2</a></li>
     <li><a href="http://www.degeneratestate.org/category/panama_paper_network.html">panama_paper_network</a></li>
 </ul>
 
