image processing post added

--- a/archives.html
+++ b/archives.html
@@ -11810,6 +11810,8 @@ jQuery(document).ready(function($) {
 <h1>Archives for Degenerate State</h1>
 
 <dl>
+    <dt>23/10/2016</dt>
+    <dd><a href="http://www.degeneratestate.org/posts/2016/Oct/23/image-processing-with-numpy/">Image Processing with Numpy</a></dd>
     <dt>12/09/2016</dt>
     <dd><a href="http://www.degeneratestate.org/posts/2016/Sep/12/heavy-metal-and-natural-language-processing-part-2/">Heavy Metal and Natural Language Processing - Part 2</a></dd>
     <dt>30/06/2016</dt>
@@ -11857,6 +11859,7 @@ jQuery(document).ready(function($) {
 	  ga('create', 'UA-58624859-1', 'auto');
 	  ga('send', 'pageview');
 
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-580ce8ac6a421444"></script>
 	</script>
 </body>
 </html>
