--- a/authors.html
+++ b/authors.html
@@ -11810,7 +11810,7 @@ jQuery(document).ready(function($) {
 <section id="content" class="body">
     <h1>Authors on Degenerate State</h1>
     <ul>
-        <li><a href="http://www.degeneratestate.org/author/iain.html">Iain</a> (10)</li>
+        <li><a href="http://www.degeneratestate.org/author/iain.html">Iain</a> (11)</li>
     </ul>
 </section>
 
@@ -11839,6 +11839,7 @@ jQuery(document).ready(function($) {
 	  ga('create', 'UA-58624859-1', 'auto');
 	  ga('send', 'pageview');
 
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-580ce8ac6a421444"></script>
 	</script>
 </body>
 </html>
