--- a/categories.html
+++ b/categories.html
@@ -11813,6 +11813,7 @@ jQuery(document).ready(function($) {
     <li><a href="http://www.degeneratestate.org/category/generalelection1.html">GeneralElection1</a></li>
     <li><a href="http://www.degeneratestate.org/category/generalelection2.html">GeneralElection2</a></li>
     <li><a href="http://www.degeneratestate.org/category/hypercube.html">HyperCube</a></li>
+    <li><a href="http://www.degeneratestate.org/category/image_processing_with_numpy.html">image_processing_with_numpy</a></li>
     <li><a href="http://www.degeneratestate.org/category/mastermind.html">Mastermind</a></li>
     <li><a href="http://www.degeneratestate.org/category/metallyrics1.html">MetalLyrics1</a></li>
     <li><a href="http://www.degeneratestate.org/category/metallyrics2.html">MetalLyrics2</a></li>
@@ -11843,6 +11844,7 @@ jQuery(document).ready(function($) {
 	  ga('create', 'UA-58624859-1', 'auto');
 	  ga('send', 'pageview');
 
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-580ce8ac6a421444"></script>
 	</script>
 </body>
 </html>
