--- a/index.html
+++ b/index.html
@@ -11810,6 +11810,12 @@ jQuery(document).ready(function($) {
 <section id="content" class="body">
 		<div class = "index-entry">
             <p>
+				23/10/2016 - 
+				<a href="http://www.degeneratestate.org/posts/2016/Oct/23/image-processing-with-numpy/" rel="bookmark" title="Permalink to Image Processing with Numpy">Image Processing with Numpy</a>
+			</p>
+		</div>
+		<div class = "index-entry">
+            <p>
 				12/09/2016 - 
 				<a href="http://www.degeneratestate.org/posts/2016/Sep/12/heavy-metal-and-natural-language-processing-part-2/" rel="bookmark" title="Permalink to Heavy Metal and Natural Language Processing - Part 2">Heavy Metal and Natural Language Processing - Part 2</a>
 			</p>
@@ -11862,12 +11868,6 @@ jQuery(document).ready(function($) {
 				<a href="http://www.degeneratestate.org/posts/2015/Jan/10/games-of-life/" rel="bookmark" title="Permalink to Games of Life">Games of Life</a>
 			</p>
 		</div>
-		<div class = "index-entry">
-            <p>
-				05/01/2015 - 
-				<a href="http://www.degeneratestate.org/posts/2015/Jan/05/first-post/" rel="bookmark" title="Permalink to First Post">First Post</a>
-			</p>
-		</div>
 </section>
 
 
@@ -11895,6 +11895,7 @@ jQuery(document).ready(function($) {
 	  ga('create', 'UA-58624859-1', 'auto');
 	  ga('send', 'pageview');
 
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-580ce8ac6a421444"></script>
 	</script>
 </body>
 </html>
