added resources for presentations

--- a/static/presentations/pppd2016.html
+++ b/static/presentations/pppd2016.html
@@ -11850,7 +11850,7 @@ a.anchor-link {
 </ul>
 <p>This presentation is based on the work completed during a hackathon run by transparency international in May 2016.</p>
 <p>The original write-up is <a href="http://www.degeneratestate.org/posts/2016/Jun/30/exploring-the-panama-papers-network/">here</a></p>
-<p>This presentation is online at <a href="">url</a></p>
+<p>This presentation is online at <a href="http://www.degeneratestate.org/static/presentations/pppd2016.html">www.degeneratestate.org/static/presentations/pppd2016.html</a></p>
 
 </div>
 </div>
