First post of 2017 added

--- a/archives.html
+++ b/archives.html
@@ -11810,6 +11810,8 @@ jQuery(document).ready(function($) {
 <h1>Archives for Degenerate State</h1>
 
 <dl>
+    <dt>06/01/2017</dt>
+    <dd><a href="http://www.degeneratestate.org/posts/2017/Jan/06/the-three-body-holiday-problem/">The Three Body Holiday Problem</a></dd>
     <dt>23/10/2016</dt>
     <dd><a href="http://www.degeneratestate.org/posts/2016/Oct/23/image-processing-with-numpy/">Image Processing with Numpy</a></dd>
     <dt>12/09/2016</dt>
