--- a/categories.html
+++ b/categories.html
@@ -11818,6 +11818,7 @@ jQuery(document).ready(function($) {
     <li><a href="http://www.degeneratestate.org/category/metallyrics1.html">MetalLyrics1</a></li>
     <li><a href="http://www.degeneratestate.org/category/metallyrics2.html">MetalLyrics2</a></li>
     <li><a href="http://www.degeneratestate.org/category/panama_paper_network.html">panama_paper_network</a></li>
+    <li><a href="http://www.degeneratestate.org/category/three-body-holiday-problem.html">Three-body-holiday-problem</a></li>
 </ul>
 
         <footer id="contentinfo" class="body">
