--- a/index.html
+++ b/index.html
@@ -11810,6 +11810,12 @@ jQuery(document).ready(function($) {
 <section id="content" class="body">
 		<div class = "index-entry">
             <p>
+				06/01/2017 - 
+				<a href="http://www.degeneratestate.org/posts/2017/Jan/06/the-three-body-holiday-problem/" rel="bookmark" title="Permalink to The Three Body Holiday Problem">The Three Body Holiday Problem</a>
+			</p>
+		</div>
+		<div class = "index-entry">
+            <p>
 				23/10/2016 - 
 				<a href="http://www.degeneratestate.org/posts/2016/Oct/23/image-processing-with-numpy/" rel="bookmark" title="Permalink to Image Processing with Numpy">Image Processing with Numpy</a>
 			</p>
@@ -11860,12 +11866,6 @@ jQuery(document).ready(function($) {
             <p>
 				20/01/2015 - 
 				<a href="http://www.degeneratestate.org/posts/2015/Jan/20/uk-general-elections-part1/" rel="bookmark" title="Permalink to UK General Elections - part1">UK General Elections - part1</a>
-			</p>
-		</div>
-		<div class = "index-entry">
-            <p>
-				10/01/2015 - 
-				<a href="http://www.degeneratestate.org/posts/2015/Jan/10/games-of-life/" rel="bookmark" title="Permalink to Games of Life">Games of Life</a>
 			</p>
 		</div>
 </section>
