--- a/index2.html
+++ b/index2.html
@@ -11810,6 +11810,12 @@ jQuery(document).ready(function($) {
 <section id="content" class="body">
 		<div class = "index-entry">
             <p>
+				10/01/2015 - 
+				<a href="http://www.degeneratestate.org/posts/2015/Jan/10/games-of-life/" rel="bookmark" title="Permalink to Games of Life">Games of Life</a>
+			</p>
+		</div>
+		<div class = "index-entry">
+            <p>
 				05/01/2015 - 
 				<a href="http://www.degeneratestate.org/posts/2015/Jan/05/first-post/" rel="bookmark" title="Permalink to First Post">First Post</a>
 			</p>
