Updating pydata slides again

--- a/static/presentations/metal/pd2017.html
+++ b/static/presentations/metal/pd2017.html
@@ -12160,7 +12160,27 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Metallica's-Emotional-Arc">Metallica's Emotional Arc<a class="anchor-link" href="#Metallica's-Emotional-Arc">&#182;</a></h2><p><img src="resources/metallica_arc.png" alt="metal"></p>
+<h1 id="Most-Metal-Song---Infinite-Darkness,-Tormentor">Most Metal Song - Infinite Darkness, Tormentor<a class="anchor-link" href="#Most-Metal-Song---Infinite-Darkness,-Tormentor">&#182;</a></h1>
+<pre><code>After when the sun will die
+After the lights
+Evil souls of the dark will
+Wake up and fight
+
+Will be
+Dark, War, Burn, Pain
+
+After, when the wrong is right
+Pain is nice
+Total destructions winds
+Blow, and blow
+
+Will be
+Dark, War, Burn, Pain
+
+Storm, wild, thunder, infinite darkness...
+Storm, wild, thunder, infinite darkness...
+Storm, wild, thunder, infinite darkness...
+Storm, wild, thunder, infinite darkness...</code></pre>
 
 </div>
 </div>
@@ -12170,7 +12190,7 @@ a.anchor-link {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Iron-Maiden's-Emotional-Arc">Iron Maiden's Emotional Arc<a class="anchor-link" href="#Iron-Maiden's-Emotional-Arc">&#182;</a></h2><p><img src="resources/ironmaiden_arc.png" alt="metal"></p>
+<h2 id="Metallica's-Emotional-Arc">Metallica's Emotional Arc<a class="anchor-link" href="#Metallica's-Emotional-Arc">&#182;</a></h2><p><img src="resources/metallica_arc.png" alt="metal"></p>
 
 </div>
 </div>
@@ -12304,7 +12324,36 @@ $$</li>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Vectorhead">Vectorhead<a class="anchor-link" href="#Vectorhead">&#182;</a></h2>
+<h2 id="Vectorhead">Vectorhead<a class="anchor-link" href="#Vectorhead">&#182;</a></h2><table>
+<thead><tr>
+<th>Band</th>
+<th>Nearby Bands</th>
+<th>Nearby Songs</th>
+<th>Important words</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>motorhead</td>
+<td>motorhead, alicecooper, helloween</td>
+<td>Life's A Bitch,  Desperate For You,  Name In Vain</td>
+<td>don't, know, ain't</td>
+</tr>
+<tr>
+<td>slayer</td>
+<td>slayer, hypocrisy, testament</td>
+<td>Black Magic (Live),  Black Magic,  Black Magic</td>
+<td>death, blood, life</td>
+</tr>
+<tr>
+<td>carcass</td>
+<td>carcass, cannibalcorpse, archenemy</td>
+<td>Pyosisified (Rotten To The Gore),  Pyosified (Still Rotten To The Gore),  Malignant Defecation</td>
+<td>flesh, pus, septic</td>
+</tr>
+</tbody>
+</table>
+
 </div>
 </div>
 </div></section><section>
@@ -12487,7 +12536,14 @@ $$P(w_{n}|w_{0}...w_{i-1}) \approx P(w_{n}|w_{n-k}...w_{n-1})$$
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="The-End">The End<a class="anchor-link" href="#The-End">&#182;</a></h1><p>Questions?</p>
+<h1 id="The-End">The End<a class="anchor-link" href="#The-End">&#182;</a></h1>
+<pre><code>"Formulas to stop your heart
+And eradicate your soul
+I will raise you from the ground
+Strenghtened by the Python God"
+
+</code></pre>
+<p>Deathwish, Usurper</p>
 
 </div>
 </div>
