Post on Turing Patterns added

--- a/archives.html
+++ b/archives.html
@@ -11810,6 +11810,8 @@ jQuery(document).ready(function($) {
 <h1>Archives for Degenerate State</h1>
 
 <dl>
+    <dt>05/05/2017</dt>
+    <dd><a href="http://www.degeneratestate.org/posts/2017/May/05/turing-patterns/">Turing Patterns</a></dd>
     <dt>06/01/2017</dt>
     <dd><a href="http://www.degeneratestate.org/posts/2017/Jan/06/the-three-body-holiday-problem/">The Three Body Holiday Problem</a></dd>
     <dt>23/10/2016</dt>
@@ -11847,7 +11849,7 @@ jQuery(document).ready(function($) {
         </div>
 
 		<br>
-			<p>Copyright &copy 2015 - <script type="text/javascript">document.write(new Date().getFullYear()); </script> Degenerate State </p>
+			<p>Copyright &copy 2015 - <script type="text/javascript">document.write(new Date().getFullYear()); </script> Iain Barr</p>
         </footer><!-- /#contentinfo -->
 		</div>
 	</div>
