--- a/authors.html
+++ b/authors.html
@@ -11810,7 +11810,7 @@ jQuery(document).ready(function($) {
 <section id="content" class="body">
     <h1>Authors on Degenerate State</h1>
     <ul>
-        <li><a href="http://www.degeneratestate.org/author/iain.html">Iain</a> (12)</li>
+        <li><a href="http://www.degeneratestate.org/author/iain.html">Iain</a> (13)</li>
     </ul>
 </section>
 
@@ -11825,7 +11825,7 @@ jQuery(document).ready(function($) {
         </div>
 
 		<br>
-			<p>Copyright &copy 2015 - <script type="text/javascript">document.write(new Date().getFullYear()); </script> Degenerate State </p>
+			<p>Copyright &copy 2015 - <script type="text/javascript">document.write(new Date().getFullYear()); </script> Iain Barr</p>
         </footer><!-- /#contentinfo -->
 		</div>
 	</div>
