--- a/categories.html
+++ b/categories.html
@@ -11819,6 +11819,7 @@ jQuery(document).ready(function($) {
     <li><a href="http://www.degeneratestate.org/category/metallyrics2.html">MetalLyrics2</a></li>
     <li><a href="http://www.degeneratestate.org/category/panama_paper_network.html">panama_paper_network</a></li>
     <li><a href="http://www.degeneratestate.org/category/three-body-holiday-problem.html">Three-body-holiday-problem</a></li>
+    <li><a href="http://www.degeneratestate.org/category/turing-patterns.html">turing-patterns</a></li>
 </ul>
 
         <footer id="contentinfo" class="body">
@@ -11831,7 +11832,7 @@ jQuery(document).ready(function($) {
         </div>
 
 		<br>
-			<p>Copyright &copy 2015 - <script type="text/javascript">document.write(new Date().getFullYear()); </script> Degenerate State </p>
+			<p>Copyright &copy 2015 - <script type="text/javascript">document.write(new Date().getFullYear()); </script> Iain Barr</p>
         </footer><!-- /#contentinfo -->
 		</div>
 	</div>
