--- a/index.html
+++ b/index.html
@@ -11810,6 +11810,12 @@ jQuery(document).ready(function($) {
 <section id="content" class="body">
 		<div class = "index-entry">
             <p>
+				05/05/2017 - 
+				<a href="http://www.degeneratestate.org/posts/2017/May/05/turing-patterns/" rel="bookmark" title="Permalink to Turing Patterns">Turing Patterns</a>
+			</p>
+		</div>
+		<div class = "index-entry">
+            <p>
 				06/01/2017 - 
 				<a href="http://www.degeneratestate.org/posts/2017/Jan/06/the-three-body-holiday-problem/" rel="bookmark" title="Permalink to The Three Body Holiday Problem">The Three Body Holiday Problem</a>
 			</p>
@@ -11893,7 +11899,7 @@ jQuery(document).ready(function($) {
         </div>
 
 		<br>
-			<p>Copyright &copy 2015 - <script type="text/javascript">document.write(new Date().getFullYear()); </script> Degenerate State </p>
+			<p>Copyright &copy 2015 - <script type="text/javascript">document.write(new Date().getFullYear()); </script> Iain Barr</p>
         </footer><!-- /#contentinfo -->
 		</div>
 	</div>
