Post on images-to-triangles added

--- a/archives.html
+++ b/archives.html
@@ -11839,6 +11839,8 @@ jQuery(document).ready(function($) {
 <h1>Archives for Degenerate State</h1>
 
 <dl>
+    <dt>24/05/2017</dt>
+    <dd><a href="http://www.degeneratestate.org/posts/2017/May/24/images-to-triangles/">Images to Triangles</a></dd>
     <dt>05/05/2017</dt>
     <dd><a href="http://www.degeneratestate.org/posts/2017/May/05/turing-patterns/">Turing Patterns</a></dd>
     <dt>06/01/2017</dt>
