--- a/categories.html
+++ b/categories.html
@@ -11843,6 +11843,7 @@ jQuery(document).ready(function($) {
     <li><a href="http://www.degeneratestate.org/category/generalelection2.html">GeneralElection2</a></li>
     <li><a href="http://www.degeneratestate.org/category/hypercube.html">HyperCube</a></li>
     <li><a href="http://www.degeneratestate.org/category/image_processing_with_numpy.html">image_processing_with_numpy</a></li>
+    <li><a href="http://www.degeneratestate.org/category/images-to-triangles.html">images-to-triangles</a></li>
     <li><a href="http://www.degeneratestate.org/category/mastermind.html">Mastermind</a></li>
     <li><a href="http://www.degeneratestate.org/category/metallyrics1.html">MetalLyrics1</a></li>
     <li><a href="http://www.degeneratestate.org/category/metallyrics2.html">MetalLyrics2</a></li>
