--- a/index.html
+++ b/index.html
@@ -11839,6 +11839,12 @@ jQuery(document).ready(function($) {
 <section id="content" class="body">
 		<div class = "index-entry">
             <p>
+				24/05/2017 - 
+				<a href="http://www.degeneratestate.org/posts/2017/May/24/images-to-triangles/" rel="bookmark" title="Permalink to Images to Triangles">Images to Triangles</a>
+			</p>
+		</div>
+		<div class = "index-entry">
+            <p>
 				05/05/2017 - 
 				<a href="http://www.degeneratestate.org/posts/2017/May/05/turing-patterns/" rel="bookmark" title="Permalink to Turing Patterns">Turing Patterns</a>
 			</p>
