New post on metal lyrics added

--- a/categories.html
+++ b/categories.html
@@ -11822,6 +11822,9 @@ jQuery(document).ready(function($) {
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
+
+        <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5954939f779d2a0012862960&product=inline-share-buttons"></script>
+
 </head>
 
 <body id="index" class="home">
@@ -11847,6 +11850,7 @@ jQuery(document).ready(function($) {
     <li><a href="http://www.degeneratestate.org/category/mastermind.html">Mastermind</a></li>
     <li><a href="http://www.degeneratestate.org/category/metallyrics1.html">MetalLyrics1</a></li>
     <li><a href="http://www.degeneratestate.org/category/metallyrics2.html">MetalLyrics2</a></li>
+    <li><a href="http://www.degeneratestate.org/category/metallyrics3.html">MetalLyrics3</a></li>
     <li><a href="http://www.degeneratestate.org/category/panama_paper_network.html">panama_paper_network</a></li>
     <li><a href="http://www.degeneratestate.org/category/three-body-holiday-problem.html">Three-body-holiday-problem</a></li>
     <li><a href="http://www.degeneratestate.org/category/turing-patterns.html">turing-patterns</a></li>
