--- a/archives.html
+++ b/archives.html
@@ -11822,6 +11822,9 @@ jQuery(document).ready(function($) {
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
+
+        <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5954939f779d2a0012862960&product=inline-share-buttons"></script>
+
 </head>
 
 <body id="index" class="home">
@@ -11839,6 +11842,8 @@ jQuery(document).ready(function($) {
 <h1>Archives for Degenerate State</h1>
 
 <dl>
+    <dt>13/06/2017</dt>
+    <dd><a href="http://www.degeneratestate.org/posts/2017/Jun/13/heavy-metal-and-natural-language-processing-part-3/">Heavy Metal and Natural Language Processing - Part 3</a></dd>
     <dt>24/05/2017</dt>
     <dd><a href="http://www.degeneratestate.org/posts/2017/May/24/images-to-triangles/">Images to Triangles</a></dd>
     <dt>05/05/2017</dt>
