--- a/authors.html
+++ b/authors.html
@@ -11822,6 +11822,9 @@ jQuery(document).ready(function($) {
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
+
+        <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5954939f779d2a0012862960&product=inline-share-buttons"></script>
+
 </head>
 
 <body id="index" class="home">
@@ -11839,7 +11842,7 @@ jQuery(document).ready(function($) {
 <section id="content" class="body">
     <h1>Authors on Degenerate State</h1>
     <ul>
-        <li><a href="http://www.degeneratestate.org/author/iain.html">Iain</a> (14)</li>
+        <li><a href="http://www.degeneratestate.org/author/iain.html">Iain</a> (15)</li>
     </ul>
 </section>
 
