--- a/index.html
+++ b/index.html
@@ -11822,6 +11822,9 @@ jQuery(document).ready(function($) {
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
+
+        <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5954939f779d2a0012862960&product=inline-share-buttons"></script>
+
 </head>
 
 <body id="index" class="home">
@@ -11837,6 +11840,12 @@ jQuery(document).ready(function($) {
 
 
 <section id="content" class="body">
+		<div class = "index-entry">
+            <p>
+				13/06/2017 - 
+				<a href="http://www.degeneratestate.org/posts/2017/Jun/13/heavy-metal-and-natural-language-processing-part-3/" rel="bookmark" title="Permalink to Heavy Metal and Natural Language Processing - Part 3">Heavy Metal and Natural Language Processing - Part 3</a>
+			</p>
+		</div>
 		<div class = "index-entry">
             <p>
 				24/05/2017 - 
