--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -11822,6 +11822,9 @@ jQuery(document).ready(function($) {
         <!--[if IE]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
+
+        <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5954939f779d2a0012862960&product=inline-share-buttons"></script>
+
 </head>
 
 <body id="index" class="home">
