fixed sharing buttons not to use any js

--- a/archives.html
+++ b/archives.html
@@ -11815,6 +11815,7 @@ jQuery(document).ready(function($) {
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/normalize.css" />
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/font-awesome-4.2.0/css/font-awesome.min.css" />
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/main.css" />
+        <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/socialmedia.css" />
 
         <link href="http://www.degeneratestate.org/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Degenerate State Atom Feed" />
         <link href="http://www.degeneratestate.org/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Degenerate State RSS Feed" />
@@ -11823,7 +11824,6 @@ jQuery(document).ready(function($) {
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
 
-        <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=5954939f779d2a0012862960&product=inline-share-buttons"></script>
 
 </head>
 
