making-a-prophet post added

--- a/index.html
+++ b/index.html
@@ -11842,6 +11842,12 @@ jQuery(document).ready(function($) {
 <section id="content" class="body">
 		<div class = "index-entry">
             <p>
+				24/07/2017 - 
+				<a href="http://www.degeneratestate.org/posts/2017/Jul/24/making-a-prophet/" rel="bookmark" title="Permalink to Making A Prophet">Making A Prophet</a>
+			</p>
+		</div>
+		<div class = "index-entry">
+            <p>
 				13/06/2017 - 
 				<a href="http://www.degeneratestate.org/posts/2017/Jun/13/heavy-metal-and-natural-language-processing-part-3/" rel="bookmark" title="Permalink to Heavy Metal and Natural Language Processing - Part 3">Heavy Metal and Natural Language Processing - Part 3</a>
 			</p>
