--- a/archives.html
+++ b/archives.html
@@ -11842,6 +11842,8 @@ jQuery(document).ready(function($) {
 <h1>Archives for Degenerate State</h1>
 
 <dl>
+    <dt>24/07/2017</dt>
+    <dd><a href="http://www.degeneratestate.org/posts/2017/Jul/24/making-a-prophet/">Making A Prophet</a></dd>
     <dt>13/06/2017</dt>
     <dd><a href="http://www.degeneratestate.org/posts/2017/Jun/13/heavy-metal-and-natural-language-processing-part-3/">Heavy Metal and Natural Language Processing - Part 3</a></dd>
     <dt>24/05/2017</dt>
