--- a/index.html
+++ b/index.html
@@ -11842,6 +11842,12 @@ jQuery(document).ready(function($) {
 <section id="content" class="body">
 		<div class = "index-entry">
             <p>
+				30/09/2017 - 
+				<a href="http://www.degeneratestate.org/posts/2017/Sep/30/map-projections/" rel="bookmark" title="Permalink to Map Projections">Map Projections</a>
+			</p>
+		</div>
+		<div class = "index-entry">
+            <p>
 				24/07/2017 - 
 				<a href="http://www.degeneratestate.org/posts/2017/Jul/24/making-a-prophet/" rel="bookmark" title="Permalink to Making A Prophet">Making A Prophet</a>
 			</p>
