Post on simpson's paradox added.

--- a/categories.html
+++ b/categories.html
@@ -11844,6 +11844,7 @@ jQuery(document).ready(function($) {
     <li><a href="http://www.degeneratestate.org/category/gameoflife1.html">GameOfLife1</a></li>
     <li><a href="http://www.degeneratestate.org/category/generalelection1.html">GeneralElection1</a></li>
     <li><a href="http://www.degeneratestate.org/category/generalelection2.html">GeneralElection2</a></li>
+    <li><a href="http://www.degeneratestate.org/category/generating-examples-simpsons-paradox.html">generating-examples-simpsons-paradox</a></li>
     <li><a href="http://www.degeneratestate.org/category/hypercube.html">HyperCube</a></li>
     <li><a href="http://www.degeneratestate.org/category/image_processing_with_numpy.html">image_processing_with_numpy</a></li>
     <li><a href="http://www.degeneratestate.org/category/images-to-triangles.html">images-to-triangles</a></li>
