Post on reducing variance added

--- a/categories.html
+++ b/categories.html
@@ -11855,6 +11855,7 @@ jQuery(document).ready(function($) {
     <li><a href="http://www.degeneratestate.org/category/metallyrics2.html">MetalLyrics2</a></li>
     <li><a href="http://www.degeneratestate.org/category/metallyrics3.html">MetalLyrics3</a></li>
     <li><a href="http://www.degeneratestate.org/category/panama_paper_network.html">panama_paper_network</a></li>
+    <li><a href="http://www.degeneratestate.org/category/reducing-variance-ab-tests.html">reducing-variance-ab-tests</a></li>
     <li><a href="http://www.degeneratestate.org/category/three-body-holiday-problem.html">Three-body-holiday-problem</a></li>
     <li><a href="http://www.degeneratestate.org/category/turing-patterns.html">turing-patterns</a></li>
 </ul>
