--- a/index.html
+++ b/index.html
@@ -11842,6 +11842,12 @@ jQuery(document).ready(function($) {
 <section id="content" class="body">
 		<div class = "index-entry">
             <p>
+				04/01/2018 - 
+				<a href="http://www.degeneratestate.org/posts/2018/Jan/04/reducing-the-variance-of-ab-test-using-prior-information/" rel="bookmark" title="Permalink to Reducing the Variance of A/B Test using Prior Information">Reducing the Variance of A/B Test using Prior Information</a>
+			</p>
+		</div>
+		<div class = "index-entry">
+            <p>
 				22/10/2017 - 
 				<a href="http://www.degeneratestate.org/posts/2017/Oct/22/generating-examples-of-simpsons-paradox/" rel="bookmark" title="Permalink to Generating Examples of Simpson's Paradox">Generating Examples of Simpson's Paradox</a>
 			</p>
