--- a/index.html
+++ b/index.html
@@ -11843,7 +11843,7 @@ jQuery(document).ready(function($) {
 		<div class = "index-entry">
             <p>
 				04/01/2018 - 
-				<a href="http://www.degeneratestate.org/posts/2018/Jan/04/reducing-the-variance-of-ab-test-using-prior-information/" rel="bookmark" title="Permalink to Reducing the Variance of A/B Test using Prior Information">Reducing the Variance of A/B Test using Prior Information</a>
+				<a href="http://www.degeneratestate.org/posts/2018/Jan/04/reducing-the-variance-of-ab-test-using-prior-information/" rel="bookmark" title="Permalink to Reducing the Variance of A/B Tests Using Prior Information">Reducing the Variance of A/B Tests Using Prior Information</a>
 			</p>
 		</div>
 		<div class = "index-entry">
