--- a/archives.html
+++ b/archives.html
@@ -11843,7 +11843,7 @@ jQuery(document).ready(function($) {
 
 <dl>
     <dt>04/01/2018</dt>
-    <dd><a href="http://www.degeneratestate.org/posts/2018/Jan/04/reducing-the-variance-of-ab-test-using-prior-information/">Reducing the Variance of A/B Test using Prior Information</a></dd>
+    <dd><a href="http://www.degeneratestate.org/posts/2018/Jan/04/reducing-the-variance-of-ab-test-using-prior-information/">Reducing the Variance of A/B Tests Using Prior Information</a></dd>
     <dt>22/10/2017</dt>
     <dd><a href="http://www.degeneratestate.org/posts/2017/Oct/22/generating-examples-of-simpsons-paradox/">Generating Examples of Simpson's Paradox</a></dd>
     <dt>30/09/2017</dt>
