new post on causality

--- a/archives.html
+++ b/archives.html
@@ -11838,6 +11838,8 @@ jQuery(document).ready(function($) {
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/main.css" />
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/socialmedia.css" />
 
+        <link rel='shortcut icon' type='image/x-icon' href='http://www.degeneratestate.org/theme/images/favicon.ico' />
+        
         <link href="http://www.degeneratestate.org/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Degenerate State Atom Feed" />
         <link href="http://www.degeneratestate.org/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Degenerate State RSS Feed" />
 
@@ -11863,6 +11865,8 @@ jQuery(document).ready(function($) {
 <h1>Archives for Degenerate State</h1>
 
 <dl>
+    <dt>10/07/2018</dt>
+    <dd><a href="http://www.degeneratestate.org/posts/2018/Jul/10/causal-inference-with-python-part-2-causal-graphical-models/">Causal Inference With Python Part 2 - Causal Graphical Models</a></dd>
     <dt>24/03/2018</dt>
     <dd><a href="http://www.degeneratestate.org/posts/2018/Mar/24/causal-inference-with-python-part-1-potential-outcomes/">Causal Inference With Python Part 1 - Potential Outcomes</a></dd>
     <dt>04/01/2018</dt>
