--- a/authors.html
+++ b/authors.html
@@ -11838,6 +11838,8 @@ jQuery(document).ready(function($) {
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/main.css" />
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/socialmedia.css" />
 
+        <link rel='shortcut icon' type='image/x-icon' href='http://www.degeneratestate.org/theme/images/favicon.ico' />
+        
         <link href="http://www.degeneratestate.org/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Degenerate State Atom Feed" />
         <link href="http://www.degeneratestate.org/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Degenerate State RSS Feed" />
 
@@ -11863,7 +11865,7 @@ jQuery(document).ready(function($) {
 <section id="content" class="body">
     <h1>Authors on Degenerate State</h1>
     <ul>
-        <li><a href="http://www.degeneratestate.org/author/iain.html">Iain</a> (20)</li>
+        <li><a href="http://www.degeneratestate.org/author/iain.html">Iain</a> (21)</li>
     </ul>
 </section>
 
