--- a/categories.html
+++ b/categories.html
@@ -11838,6 +11838,8 @@ jQuery(document).ready(function($) {
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/main.css" />
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/socialmedia.css" />
 
+        <link rel='shortcut icon' type='image/x-icon' href='http://www.degeneratestate.org/theme/images/favicon.ico' />
+        
         <link href="http://www.degeneratestate.org/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Degenerate State Atom Feed" />
         <link href="http://www.degeneratestate.org/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Degenerate State RSS Feed" />
 
@@ -11861,6 +11863,7 @@ jQuery(document).ready(function($) {
 
 <ul>
     <li><a href="http://www.degeneratestate.org/category/causal-inference-part-1-potential-outcomes.html">causal-inference-part-1-potential-outcomes</a></li>
+    <li><a href="http://www.degeneratestate.org/category/causal-inference-part-2-causal-graphical-models.html">causal-inference-part-2-causal-graphical-models</a></li>
     <li><a href="http://www.degeneratestate.org/category/extracting_pdf_tables.html">extracting_pdf_tables</a></li>
     <li><a href="http://www.degeneratestate.org/category/first.html">First</a></li>
     <li><a href="http://www.degeneratestate.org/category/gameoflife1.html">GameOfLife1</a></li>
