--- a/index.html
+++ b/index.html
@@ -11838,6 +11838,8 @@ jQuery(document).ready(function($) {
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/main.css" />
         <link rel="stylesheet" href="http://www.degeneratestate.org/theme/css/socialmedia.css" />
 
+        <link rel='shortcut icon' type='image/x-icon' href='http://www.degeneratestate.org/theme/images/favicon.ico' />
+        
         <link href="http://www.degeneratestate.org/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Degenerate State Atom Feed" />
         <link href="http://www.degeneratestate.org/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="Degenerate State RSS Feed" />
 
@@ -11861,6 +11863,12 @@ jQuery(document).ready(function($) {
 
 
 <section id="content" class="body">
+		<div class = "index-entry">
+            <p>
+				10/07/2018 - 
+				<a href="http://www.degeneratestate.org/posts/2018/Jul/10/causal-inference-with-python-part-2-causal-graphical-models/" rel="bookmark" title="Permalink to Causal Inference With Python Part 2 - Causal Graphical Models">Causal Inference With Python Part 2 - Causal Graphical Models</a>
+			</p>
+		</div>
 		<div class = "index-entry">
             <p>
 				24/03/2018 - 
