causality part 3 added

--- a/archives.html
+++ b/archives.html
@@ -11865,6 +11865,8 @@ jQuery(document).ready(function($) {
 <h1>Archives for Degenerate State</h1>
 
 <dl>
+    <dt>03/09/2018</dt>
+    <dd><a href="http://www.degeneratestate.org/posts/2018/Sep/03/causal-inference-with-python-part-3-frontdoor-adjustment/">Causal Inference With Python Part 3 - Frontdoor Adjustment</a></dd>
     <dt>10/07/2018</dt>
     <dd><a href="http://www.degeneratestate.org/posts/2018/Jul/10/causal-inference-with-python-part-2-causal-graphical-models/">Causal Inference With Python Part 2 - Causal Graphical Models</a></dd>
     <dt>24/03/2018</dt>
