--- a/categories.html
+++ b/categories.html
@@ -11864,6 +11864,7 @@ jQuery(document).ready(function($) {
 <ul>
     <li><a href="http://www.degeneratestate.org/category/causal-inference-part-1-potential-outcomes.html">causal-inference-part-1-potential-outcomes</a></li>
     <li><a href="http://www.degeneratestate.org/category/causal-inference-part-2-causal-graphical-models.html">causal-inference-part-2-causal-graphical-models</a></li>
+    <li><a href="http://www.degeneratestate.org/category/causal-inference-part-3-frontdoor.html">causal-inference-part-3-frontdoor</a></li>
     <li><a href="http://www.degeneratestate.org/category/extracting_pdf_tables.html">extracting_pdf_tables</a></li>
     <li><a href="http://www.degeneratestate.org/category/first.html">First</a></li>
     <li><a href="http://www.degeneratestate.org/category/gameoflife1.html">GameOfLife1</a></li>
