--- a/index.html
+++ b/index.html
@@ -11865,6 +11865,12 @@ jQuery(document).ready(function($) {
 <section id="content" class="body">
 		<div class = "index-entry">
             <p>
+				03/09/2018 - 
+				<a href="http://www.degeneratestate.org/posts/2018/Sep/03/causal-inference-with-python-part-3-frontdoor-adjustment/" rel="bookmark" title="Permalink to Causal Inference With Python Part 3 - Frontdoor Adjustment">Causal Inference With Python Part 3 - Frontdoor Adjustment</a>
+			</p>
+		</div>
+		<div class = "index-entry">
+            <p>
 				10/07/2018 - 
 				<a href="http://www.degeneratestate.org/posts/2018/Jul/10/causal-inference-with-python-part-2-causal-graphical-models/" rel="bookmark" title="Permalink to Causal Inference With Python Part 2 - Causal Graphical Models">Causal Inference With Python Part 2 - Causal Graphical Models</a>
 			</p>
